# gccpm-tvm

./: .gitignore  NOTICE  convert.py  demo.py  docker-compose.yml  get_test_images.py  image_demo.py  pyproject.toml  train.py  train_single.py  train_single_coco.py  val.py  val_single.py
datasets/: coco.py  coco_single.py  lip.py  transformations.py
models/: single_person_pose_with_mobilenet.py
modules/: __init__.py  calc_pckh.py  constants.py  load_state.py  loss.py  pose.py  utils.py
scripts/: convert_coco_labels.py  convert_to_onnx.py  make_val_subset.py  prepare_train_labels.py
